force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Action_Items__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Action_Items__c</fullName>
    <description>This field is optional and is for user narrative describing follow-up actions that result from the Site Visit. It is manually populated.</description>
    <inlineHelpText>What are the action items for follow-up?</inlineHelpText>
    <label>Action Items</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>