force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Site_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Site_Status__c</fullName>
    <description>This field is optional and specifies the condition of the subject property. It is manually populated.</description>
    <inlineHelpText>Was the office in good condition?</inlineHelpText>
    <label>Office Condition</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>