force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Visit_Date__c</fullName>
    <description>This field is optional and specifies the date of the Site Visit.</description>
    <inlineHelpText>The date in which you actually visited the site.</inlineHelpText>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>