force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Visit_Objective__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Visit_Objective__c</fullName>
    <description>This field is optional and specifies the Site Visit&apos;s object. It is manually populated.</description>
    <label>Visit Objective</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>