force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Watchlist_History__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Watchlist_History__c</fullName>
    <description>This field is optional and is for user narrative that provides background of the loan. It is manually populated.</description>
    <inlineHelpText>How did we get here?  What is the history of this loan?</inlineHelpText>
    <label>Watchlist History</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>